--- a/index.html
+++ b/index.html
@@ -441,5 +441,18 @@
 
     <!-- 添加弹窗和URL搜索参数处理脚本 -->
     <script src="js/index-page.js"></script>
+<script>
+// 自动修复豆瓣图片显示
+document.addEventListener('DOMNodeInserted', function() {
+    const images = document.querySelectorAll('img');
+    images.forEach(img => {
+        if (img.src.includes('doubanio.com') && !img.src.includes('weserv.nl')) {
+            // 将原有的 proxy 路径或直接地址 替换为 weserv 代理
+            const originalUrl = img.src.split('/proxy/')[1] || img.src;
+            img.src = 'https://images.weserv.nl/?url=' + encodeURIComponent(decodeURIComponent(originalUrl));
+        }
+    });
+});
+</script>
 </body>
 </html>
